# Internship

./: .dockerignore  .gitignore  AGENTS_SETUP_COMPLETE.md  AI_AGENTS_ECOMMERCE_STACK.md  ALL_DIAGRAM_FIXES_COMPLETE.md  ANGULAR_FASTAPI_ECOMMERCE_STACK.md  ANSWER_TABLE_FORMAT_VISUALIZATION.md  API_DIAGRAM_GENERATION_COMPLETE.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_VISUALIZATION_IMPLEMENTATION.md  BEFORE_AFTER_COMPARISON.md  BUGS_FIXED.md  BUG_LIST.md  BULLETPROOF_MERMAID_PARSING.md  CHANGELOG.md  CHANGES_MADE_TODAY.md  CHANGES_SUMMARY_V2.md  CODE_INSPECTION_SUMMARY.md  COMPLETE_CHANGES_SUMMARY.md  COMPLETE_DBD_FIX_REPORT.md  COMPLETE_FEATURE_GUIDE.md  COMPLETE_FIX_REPORT.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_FIX_SUMMARY_v3.md  DBD_BEFORE_AFTER_COMPARISON.md  DBD_FIXES_SUMMARY.md  DBD_IMPLEMENTATION_ANALYSIS.md  DBD_IMPLEMENTATION_GUIDE.md  DBD_TABLE_FORMAT_FIX.md  DBD_VISUALIZATION_GUIDE.md  DIAGRAM_DROPDOWN_FIX_SUMMARY.md  DIAGRAM_FIXES_SUMMARY.md  DIAGRAM_SOLUTION_SUMMARY.md  DIAGRAM_VALIDATION_SUMMARY.md  DROPDOWN_AND_FEEDBACK_VERIFICATION.md  ENTERPRISE_LIBRARIES.md  FEATURES.md  FEEDBACK_CHATBOT_FIX.md  FINAL_FIX_SYNTAX_ERROR.md  FINAL_IMPLEMENTATION_STATUS.md  (+67 more)
backend/: .dockerignore  autoagents.db  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/agents/: __init__.py  base_agent.py  design_system_agent.py  orchestrator.py  page_agents.py  planning_agent.py
backend/app/: __init__.py  main.py  schemas.py  storage.py
backend/app/core/: __init__.py  config.py  deps.py
backend/app/db/: base.py  session.py
backend/data/: .gitignore
(+274 files in other folders)
